# TriggersToGLTF

./: .editorconfig  CMakeLists.txt  README.md
include/: converter.h  trigger-data.h  types.h
include/binary-io/: data-stream.h
src/: converter.cpp  main.cpp  trigger-data.cpp  types.cpp
src/binary-io/: data-stream.cpp
